--- a/config.yaml
+++ b/config.yaml
@@ -14,16 +14,16 @@ carpentry: 'incubator'
 title: 'Using QDR with NVivo'
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
-created: 2023-08-22
+created: '2023-08-22'
 
 # Comma-separated list of keywords for the lesson
 keywords: 'software, data, qualitative, QDR, NVivo, CAQDAS, open data'
 
 # Life cycle stage of the lesson
 # possible values: pre-alpha, alpha, beta, stable
-life_cycle: 'pre-alpha' # FIXME
+life_cycle: 'pre-alpha'
 
-# License of the lesson
+# License of the lesson materials (recommended CC-BY 4.0)
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
@@ -58,17 +58,24 @@ contact: 'ndporter@vt.edu'
 # - another-learner.md
 
 # Order of episodes in your lesson
-episodes:
+episodes: 
 - introduction.md
+- 01-archiving-and-reusing-qualitative-data.md
+- 02-qualitative-data-formats.md
+- 03-project-management-in-nvivo.md
+- 04-coding-data-in-nvivo.md
+- 05-analyzing-data-in-nvivo.md
+- 06-archiving-and-sharing-nvivo-projects.md
+- 07-improving-reusability.md
 
 # Information for Learners
-learners:
+learners: 
 
 # Information for Instructors
-instructors:
+instructors: 
 
 # Learner Profiles
-profiles:
+profiles: 
 
 # Customisation ---------------------------------------------
 #
